# qthttpserver-sample-with-client

./: CMakeLists.txt  README.md
src/: client.cpp  server.cpp
